--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,23 @@
 /* --Colours-- */
 .bg-color-name-title {
     background-color: #676767;
+
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
+
+.ui-menu-color-resume {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #525252;
 }
 /*--/ Colours */
 
@@ -52,5 +69,54 @@ header {
     color: #fff;
 }
 
+.list-inline-item:not(:last-child){
+    margin: 0;
+}
 
+.menu-container {
+    font-size: 0;
+}
+
+#nav {
+    margin: 0;
+}
+#nav li {
+    font-size: 14px;
+    padding:0;
+}
+
+.menu-item {
+    height:120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menu-item a {
+    width: 100%;
+    text-decoration: none;
+    color: white;
+    height: 120px;
+}
+
+.menu-item a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menu-item span {
+    display:block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+.menu-item a:hover {
+
+}
 /* --/Heading-- */
