Feat: styled nav buttons with sweep in index.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,6 +80,7 @@ header {
 #nav {
     margin: 0;
 }
+
 #nav li {
     font-size: 14px;
     padding:0;
@@ -120,3 +121,13 @@ header {
 
 }
 /* --/Heading-- */
+
+
+/* --Hover.css-- */
+
+.hvr-sweep-to-bottom:before {
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 120px;
+}
+
+/* --/Hover.css-- */
