--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,10 @@
 
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -50,6 +54,23 @@ h4 {
 
 inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "exo", sans-serif;
+    font-weight: 300;
+    margin-top:25px;
+    margin-bottom: 40px;
 }
 
 /* --/Special Padding/Margin/Text-- */
@@ -213,3 +234,6 @@ footer {
     padding: 20px;
 }
 /* --/Footer */
+
+
+
