--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,10 @@
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
+
+.bg-color-work-history {
+    background-color:#9b59b6 ;
+}
 /*--/ Colours */
 
 /* --Special Padding/Margin/Text-- */
@@ -69,13 +73,14 @@ inline-block {
     padding: 0 30px 30px;
     float: none;
 }
-
+.history-heading,
 .section-heading {
     font-family: "exo", sans-serif;
     font-weight: 300;
     margin-top:25px;
     margin-bottom: 40px;
 }
+
 
 /* --/Special Padding/Margin/Text-- */
 
@@ -318,3 +323,53 @@ footer {
 /* --/Skills */
 
 
+/* --Work History */
+
+/* --/Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom:50px;
+}
+
+.timeline-item {
+    padding:4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding:0;
+    margin:0;
+}
+
+.timeline-item:before{
+    content:attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::after{
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
+
+
+.history-items {
+    margin-bottom: 30px;
+}
