--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,10 @@
 .bg-color-work-history {
     background-color:#9b59b6 ;
 }
+
+.bg-color-contact {
+    background-color: #fff;
+}
 /*--/ Colours */
 
 /* --Special Padding/Margin/Text-- */
@@ -373,3 +377,41 @@ footer {
 .history-items {
     margin-bottom: 30px;
 }
+
+
+/* --Contact Form */
+
+.contact-heading {
+    font-family: "exo", sans-serif;
+    font-weight: 300;
+    margin-top:25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top:15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+/* --/Contact Form */
+
+
+/* --Media Query */
+
+@media(min-width: 992px){
+    .center-form {
+    padding-top: 30px;
+    min-height: 24px;
+    margin: 0 auto;
+    max-width: 50%;
+}
+}
+
+/* --/Media Query */
