--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,14 @@
     background-color: #3498db;
 }
 
+.ui-menu-color-interests {
+    background-color: #e73b3b;
+}
+
+.ui-menu-color-github {
+    background-color: #143042;
+}
+
 .ui-menu-color-download {
     background-color: #525252;
 }
@@ -38,6 +46,9 @@
 
 .bg-color-work-history {
     background-color:#9b59b6 ;
+}
+.bg-color-meetups-history {
+    background-color:#f0f0f0 ;
 }
 
 .bg-color-contact {
@@ -415,3 +426,8 @@ button[type="submit"] {
 }
 
 /* --/Media Query */
+
+
+/* --Map-- */
+
+div#map {min-height: 360px;}
